--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"homepage": "https://github.com/kihlaj/education-website#readme",
 	"dependencies": {
+		"ejs": "^3.1.8",
 		"express": "^4.18.2"
 	},
 	"devDependencies": {
