--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 	"homepage": "https://github.com/kihlaj/education-website#readme",
 	"dependencies": {
 		"ejs": "^3.1.8",
-		"express": "^4.18.2"
+		"express": "^4.18.2",
+		"mongoose": "^6.6.5"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.20"
