--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 	"dependencies": {
 		"ejs": "^3.1.8",
 		"express": "^4.18.2",
-		"mongoose": "^6.6.5"
+		"mongoose": "^6.6.5",
+		"slugify": "^1.6.5"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.20"
